Revert "use the same features cfg for minion and sentinel, use features.uri for sentinel"
This reverts commit 361e29c6adef40ccc243c3b335a3ac8a665ec49d.

--- a/features/container/sentinel/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/features/container/sentinel/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -22,17 +22,17 @@
 #
 featuresRepositories = \
     mvn:org.apache.karaf.features/framework/${karafVersion}/xml/features, \
-    mvn:org.opennms.karaf/opennms/${project.version}/xml/karaf-extensions, \
     mvn:org.opennms.karaf/opennms/${project.version}/xml/spring-legacy, \
-    mvn:org.apache.karaf.features/standard/${karafVersion}/xml/features, \
-    mvn:io.hawt/hawtio-karaf/${hawtio.version}/xml/features
+    mvn:org.opennms.karaf/opennms/${project.version}/xml/karaf-extensions, \
+    mvn:org.opennms.karaf/opennms/${project.version}/xml/sentinel, \
+    mvn:org.apache.karaf.features/standard/${karafVersion}/xml/features
 
 #
 # Comma separated list of features to install at startup
 #
 featuresBoot = \
     (aries-blueprint, \
-    deployer, \
+    deployer), \
     instance/${karafVersion}, \
     package/${karafVersion}, \
     log/${karafVersion}, \
@@ -45,18 +45,16 @@ featuresBoot = \
     management/${karafVersion}, \
     service/${karafVersion}, \
     jaas/${karafVersion}, \
-    jasypt-encryption/${karafVersion}, \
     shell-compat/${karafVersion}, \
     diagnostic/${karafVersion}, \
     wrap, \
     bundle/${karafVersion}, \
     config/${karafVersion}, \
-    kar/${karafVersion}), \
+    kar/${karafVersion}, \
     guava/${guavaOsgiVersion}, \
-    karaf-extender/${project.version}, \
-    hawtio/${hawtio.version}, \
-    http, \
-    jolokia/${jolokiaVersion}
+    scv-jceks-impl/${project.version}, \
+    scv-shell/${project.version}, \
+    karaf-extender/${project.version}
 
 #
 # Resource repositories (OBR) that the features resolver can use
@@ -75,11 +73,6 @@ featuresBoot = \
 # Defines if the boot features are started in asynchronous mode (in a dedicated thread)
 #
 featuresBootAsynchronous=false
-
-#
-# Define if the feature service automatically refreshes bundles
-#
-autoRefresh=true
 
 #
 # Service requirements enforcement
