autoRefresh for karaf

--- a/features/container/sentinel/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/features/container/sentinel/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -73,7 +73,7 @@ featuresBoot = \
 #
 # Defines if the boot features are started in asynchronous mode (in a dedicated thread)
 #
-featuresBootAsynchronous=true
+featuresBootAsynchronous=false
 
 #
 # Service requirements enforcement
@@ -92,4 +92,4 @@ featuresBootAsynchronous=true
 # Store cfg file for config element in feature
 #
 #configCfgStore=true
-autoRefresh=true
+#autoRefresh=true
