--- a/container/karaf/pom.xml
+++ b/container/karaf/pom.xml
@@ -57,26 +57,26 @@
                         <feature>eventadmin</feature>
                     </startupFeatures>
                     <bootFeatures>
-                        <feature>wrap</feature>
                         <feature>aries-blueprint</feature>
-                        <feature>shell</feature>
-                        <feature>shell-compat</feature>
-                        <feature>feature</feature>
-                        <feature>jaas</feature>
-                        <feature>jasypt-encryption</feature>
-                        <feature>ssh/${karafSshdVersion}</feature>
-                        <feature>management</feature>
                         <feature>bundle</feature>
                         <feature>config</feature>
                         <feature>deployer</feature>
                         <feature>diagnostic</feature>
                         <feature>feature</feature>
                         <feature>instance</feature>
+                        <feature>jaas</feature>
+                        <feature>jaas-deployer</feature>
+                        <feature>jasypt-encryption</feature>
                         <feature>kar</feature>
                         <feature>log</feature>
+                        <feature>management</feature>
                         <feature>package</feature>
                         <feature>service</feature>
+                        <feature>shell</feature>
+                        <feature>shell-compat</feature>
+                        <feature>ssh/${karafSshdVersion}</feature>
                         <feature>system</feature>
+                        <feature>wrap</feature>
 
                         <!-- OPENNMS: Add http, http-whiteboard to the default list of features -->
                         <feature>opennms-http-whiteboard</feature>
@@ -91,6 +91,9 @@
                         <bundle>mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.jasypt-spring31/${jasyptVersion}_1</bundle>
                         <bundle>mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.xstream/${xstreamVersion}_1</bundle>
                         <bundle>mvn:org.codehaus.jettison/jettison/${jettisonVersion}</bundle>
+
+                        <!-- OPENNMS: initialize the config APIs at startup -->
+                        <bundle>mvn:org.opennms.features.config.osgi/org.opennms.features.config.osgi.del/${project.version}</bundle>
                     </installedBundles>
                     <libraries>
                         <library>mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.xerces/${xercesVersion}_1;type:=endorsed;export:=true;delegate:=true</library>
@@ -108,6 +111,7 @@
                         <library>mvn:org.apache.servicemix.specs/org.apache.servicemix.specs.activator/${karaf.servicemix.specs.version};type:=default;export:=true</library>
                         <library>mvn:org.apache.servicemix.specs/org.apache.servicemix.specs.locator/${karaf.servicemix.specs.version};type:=default;export:=true</library>
 
+                        <!-- OPENNMS: Add JNA bundles to prevent jline from refreshing (KARAF-5251) -->
                         <library>mvn:net.java.dev.jna/jna/${jnaVersion};type:=boot;export:=false</library>
                         <library>mvn:net.java.dev.jna/jna-platform/${jnaVersion};type:=boot;export:=false</library>
 
