--- a/container/shared/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/container/shared/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -24,6 +24,7 @@ featuresRepositories = \
     mvn:org.apache.karaf.features/framework/${karafVersion}/xml/features, \
     mvn:org.opennms.karaf/opennms/${project.version}/xml/karaf-extensions, \
     mvn:org.opennms.karaf/opennms/${project.version}/xml/spring-legacy, \
+    mvn:org.opennms.karaf/opennms/${project.version}/xml/features, \
     mvn:org.apache.karaf.features/standard/${karafVersion}/xml/features, \
     mvn:io.hawt/hawtio-karaf/${hawtio.version}/xml/features
 
