--- a/pom.xml
+++ b/pom.xml
@@ -1740,6 +1740,7 @@
     <felixMetatypeVersion>1.2.4</felixMetatypeVersion>
     <istackCommonsRuntimeVersion>3.0.10</istackCommonsRuntimeVersion>
     <jansiVersion>2.4.0</jansiVersion>
+    <jlineVersion>3.21.0</jlineVersion>
     <osgiUtilVersion>1.2.0</osgiUtilVersion>
     <paxUrlAetherVersion>2.6.10</paxUrlAetherVersion>
     <slingJohnzonVersion>1.2.6</slingJohnzonVersion>
@@ -1764,6 +1765,7 @@
     <paxExamVersion>4.13.5</paxExamVersion>
     <paxLoggingVersion>2.0.14</paxLoggingVersion>
     <paxSwissboxVersion>1.8.3</paxSwissboxVersion>
+    <paxUrlAetherVersion>2.6.10</paxUrlAetherVersion>
     <paxWebVersion>7.3.23</paxWebVersion>
     <pktsVersion>3.0.10</pktsVersion>
     <protobufVersion>3.22.5</protobufVersion>
