--- a/container/shared/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/container/shared/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -33,7 +33,7 @@ featuresRepositories = \
 #
 featuresBoot = \
     (aries-blueprint, \
-    deployer, \
+    deployer), \
     instance/${karafVersion}, \
     package/${karafVersion}, \
     log/${karafVersion}, \
@@ -52,7 +52,7 @@ featuresBoot = \
     wrap, \
     bundle/${karafVersion}, \
     config/${karafVersion}, \
-    kar/${karafVersion}), \
+    kar/${karafVersion}, \
     guava/${guavaOsgiVersion}, \
     karaf-extender/${project.version}, \
     hawtio/${hawtio.version}, \
