add missing backslash

--- a/container/shared/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/container/shared/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -56,7 +56,7 @@ featuresBoot = ( \
   ), \
   commons-codec/${commonsCodecVersion}, \
   guava/${guavaOsgiVersion}, \
-  karaf-extender/${project.version},
+  karaf-extender/${project.version}, \
   hawtio/${hawtio.version}, \
   http, \
   jolokia/${jolokiaVersion}
