add missing backslash

--- a/container/shared/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/container/shared/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -57,7 +57,7 @@ featuresBoot = ( \
     shell-compat/${karafVersion} \
   ), \
   commons-codec/${commonsCodecVersion}, \
-  karaf-extender/${project.version},
+  karaf-extender/${project.version}, \
   http, \
   guava/${guavaOsgiVersion}, \
   hawtio/${hawtio.version}, \
