NMS-16295: port to jung 2.1, which made a lot of API changes

--- a/container/karaf/src/main/filtered-resources/etc/overrides.properties
+++ b/container/karaf/src/main/filtered-resources/etc/overrides.properties
@@ -24,6 +24,7 @@ mvn:commons-beanutils/commons-beanutils/${commonsBeanutilsVersion}
 mvn:commons-cli/commons-cli/${commonsCliVersion}
 mvn:commons-codec/commons-codec/${commonsCodecVersion}
 mvn:commons-collections/commons-collections/${commonsCollectionsVersion}
+mvn:org.apache.commons/commons-collections4/${commonsCollectionsVersion}
 mvn:org.apache.commons/commons-compress/${commonsCompressVersion}
 mvn:commons-configuration/commons-configuration/${commonsConfigurationVersion}
 mvn:org.apache.commons/commons-csv/${commonsCsvVersion}
