NMS-9677: add SAML2 support

--- a/container/karaf/src/main/filtered-resources/etc/custom.properties
+++ b/container/karaf/src/main/filtered-resources/etc/custom.properties
@@ -1023,6 +1023,28 @@ org.osgi.framework.system.packages.extra=org.apache.karaf.branding,\
         org.springframework.security.taglibs;version="${springSecurityVersion}",\
         org.springframework.security.taglibs.authz;version="${springSecurityVersion}";uses:="javax.servlet,javax.servlet.jsp,javax.servlet.jsp.tagext,org.apache.commons.logging,org.springframework.context,org.springframework.expression,org.springframework.security.access.expression,org.springframework.security.web",\
         org.springframework.security.taglibs.csrf;version="${springSecurityVersion}";uses:="javax.servlet.jsp,org.springframework.security.web.csrf",\
+        org.opensaml;version="2.6.6",\
+        org.opensaml.liberty.binding.decoding;version="2.6.6",\
+        org.opensaml.liberty.binding.encoding;version="2.6.6",\
+        org.opensaml.liberty.paos;version="2.6.6",\
+        org.opensaml.liberty.paos.impl;version="2.6.6",\
+        org.opensaml.saml2.binding.decoding;version="2.6.6",\
+        org.opensaml.ws.transport.http;version="2.6.6",\
+        org.opensaml.ws.transport.http.httpclient;version="2.6.6",\
+        org.springframework.security.providers;version="${springSecuritySamlVersion}",\
+        org.springframework.security.saml;version="${springSecuritySamlVersion}",\
+        org.springframework.security.saml.context;version="${springSecuritySamlVersion}",\
+        org.springframework.security.saml.key;version="${springSecuritySamlVersion}",\
+        org.springframework.security.saml.log;version="${springSecuritySamlVersion}",\
+        org.springframework.security.saml.metadata;version="${springSecuritySamlVersion}",\
+        org.springframework.security.saml.parser;version="${springSecuritySamlVersion}",\
+        org.springframework.security.saml.processor;version="${springSecuritySamlVersion}",\
+        org.springframework.security.saml.storage;version="${springSecuritySamlVersion}",\
+        org.springframework.security.saml.trust;version="${springSecuritySamlVersion}",\
+        org.springframework.security.saml.trust.httpclient;version="${springSecuritySamlVersion}",\
+        org.springframework.security.saml.userdetails;version="${springSecuritySamlVersion}",\
+        org.springframework.security.saml.util;version="${springSecuritySamlVersion}",\
+        org.springframework.security.saml.websso;version="${springSecuritySamlVersion}",\
         org.springframework.stereotype;version=${springVersion},\
         org.springframework.transaction;version=${springVersion},\
         org.springframework.transaction.annotation;version=${springVersion},\
