--- a/opennms-full-assembly/pom.xml
+++ b/opennms-full-assembly/pom.xml
@@ -493,6 +493,8 @@
                 <!-- Include the OpenNMS Minion features produced by container/features/pom.xml -->
                 <feature>minion-core-api</feature>
                 <feature>opennms-dao-minion</feature>
+                <!-- pulled in by a transient dependency, so be sure we get our newer one -->
+                <feature>zookeeper-dependencies</feature>
               </features>
               <repository>${project.build.directory}/opennms-repo</repository>
             </configuration>
