--- a/container/shared/src/main/filtered-resources/etc/overrides.properties
+++ b/container/shared/src/main/filtered-resources/etc/overrides.properties
@@ -1,3 +1,4 @@
+mvn:org.apache.zookeeper/zookeeper/${zookeeperVersion}
 mvn:org.ops4j.pax.logging/pax-logging-api/${paxLoggingVersion};range=[1.0,2.0)
 mvn:org.ops4j.pax.logging/pax-logging-log4j2/${paxLoggingVersion};range=[1.0,2.0)
 mvn:org.ops4j.pax.logging/pax-logging-logback/${paxLoggingVersion};range=[1.0,2.0)
