stop publishing our own weird jest version

--- a/features/flows/api/pom.xml
+++ b/features/flows/api/pom.xml
@@ -42,9 +42,9 @@
       <type>pom</type>
     </dependency>
     <dependency>
-      <groupId>io.searchbox</groupId>
+      <groupId>org.opennms.features.jest</groupId>
       <artifactId>jest-complete-osgi</artifactId>
-      <version>${jestVersion}</version>
+      <version>${project.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
