NMS-16283: User Data Collection UI and API

--- a/opennms-base-assembly/src/main/filtered/etc/opennms.properties
+++ b/opennms-base-assembly/src/main/filtered/etc/opennms.properties
@@ -560,6 +560,12 @@ opennms.newsFeedPanel.show=true
 #
 #opennms.newsFeedPanel.url=https://www.opennms.com/feed/
 
+# This value enables or disables display of the User Data Collection popup.
+# Set to false to disable showing the popup and to prevent any data being sent.
+# If commented-out or unset, the default value is true.
+# NOTE: For now, this is disabled since implementation is not yet complete.
+opennms.userDataCollection.show=false
+
 # This value disables the sending of successful login events.  The default is to send the
 # event.  Change this value to true to disable the publishing of this event.
 #org.opennms.security.disableLoginSuccessEvent=false
