--- a/features/geocoder/google/pom.xml
+++ b/features/geocoder/google/pom.xml
@@ -75,8 +75,7 @@
     </dependency>
     <dependency>
       <groupId>org.opennms.core</groupId>
-      <artifactId>org.opennms.core.sysprops</artifactId>
-      <version>${project.version}</version>
+      <artifactId>org.opennms.core.web</artifactId>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
