--- a/core/upgrade/pom.xml
+++ b/core/upgrade/pom.xml
@@ -30,6 +30,10 @@
       <artifactId>org.opennms.core.test-api.db</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.opennms.core.test-api</groupId>
+      <artifactId>org.opennms.core.test-api.xml</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.opennms</groupId>
       <artifactId>opennms-rrd-model</artifactId>
     </dependency>
