--- a/.circleci/main/jobs/publish.yml
+++ b/.circleci/main/jobs/publish.yml
@@ -84,6 +84,7 @@ jobs:
               -DskipITs=true \
               -DskipSurefire=true \
               -DskipFailsafe=true \
+              -Dbuild.sbom=true \
               -Dbuild.skip.tarball=true \
               -Daether.connector.resumeDownloads=false \
               -Daether.connector.basic.threads=1 \
