--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,10 +12,10 @@ executors:
       - image: docker:20.10-git
   integration-test-executor:
     machine:
-      image: ubuntu-2004:202010-01
+      image: ubuntu-2004:current
   smoke-test-executor:
     machine:
-      image: ubuntu-2004:202010-01
+      image: ubuntu-2004:current
 
 # NOTE: the "_label" versions of these are for the case when your source or target
 # branches have slashes in them, that way the merge branch gets created properly
