--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,10 +15,10 @@ executors:
       - image: opennms/antora:2.3.4-b7274
   integration-test-executor:
     machine:
-      image: ubuntu-2004:202010-01
+      image: ubuntu-2004:current
   smoke-test-executor:
     machine:
-      image: ubuntu-2004:202010-01
+      image: ubuntu-2004:current
 
 # NOTE: the "_label" versions of these are for the case when your source or target
 # branches have slashes in them, that way the merge branch gets created properly
