--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,6 +14,13 @@ updates:
       include: "scope"
     schedule:
       interval: "weekly"
+    groups:
+      feather:
+        patterns:
+          - "@featherds/*"
+        update-types:
+          - "minor"
+          - "patch"
 
   - package-ecosystem: "npm"
     # Look for `package.json` and `lock` files in the `root` directory
@@ -29,6 +36,27 @@ updates:
       include: "scope"
     schedule:
       interval: "daily"
+    groups:
+      babel-and-eslint:
+        patterns:
+          - "*babel*"
+          - "*eslint*"
+        update-types:
+          - "minor"
+          - "patch"
+      jest:
+        patterns:
+          - "*jest*"
+        update-types:
+          - "minor"
+          - "patch"
+      webpack:
+        patterns:
+          - "*webpack*"
+          - "*-loader"
+        update-types:
+          - "minor"
+          - "patch"
     # these will need to be dealt with in a more deliberate way
     ignore:
       - dependency-name: "angular"
