NMS-16343: Added parameter to wait for events

--- a/opennms-provision/opennms-provision-shell/pom.xml
+++ b/opennms-provision/opennms-provision-shell/pom.xml
@@ -54,5 +54,10 @@
       <groupId>org.opennms</groupId>
       <artifactId>opennms-snmp-metadata-provisioning-adapter</artifactId>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
