set JAVA_HOME explicitly for ubuntu-2004 images

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -872,6 +872,7 @@ jobs:
     resource_class: xlarge
     environment:
       DOCKER_CLI_EXPERIMENTAL: enabled
+      JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     parameters:
       number-vcpu:
         default: 4
@@ -1218,6 +1219,8 @@ jobs:
     executor: integration-test-executor
     parallelism: 8
     resource_class: xlarge
+    environment:
+      JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     steps:
       - attach_workspace:
           at: ~/
@@ -1227,6 +1230,8 @@ jobs:
     executor: integration-test-executor
     parallelism: 10
     resource_class: xlarge
+    environment:
+      JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     steps:
       - attach_workspace:
           at: ~/
@@ -1261,6 +1266,8 @@ jobs:
     # No resource class support for machine executors, we're constrained to use the default
     # medium class which has 2 vCPUs and 8 GB RAM
     #resource_class: large
+    environment:
+      JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     steps:
       - run:
           name: "skip if flaky tests are enabled"
@@ -1282,6 +1289,8 @@ jobs:
     # No resource class support for machine executors, we're constrained to use the default
     # medium class which has 2 vCPUs and 8 GB RAM
     #resource_class: large
+    environment:
+      JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     steps:
       - run:
           name: "run if flaky tests are enabled"
@@ -1302,6 +1311,8 @@ jobs:
     # No resource class support for machine executors, we're constrained to use the default
     # medium class which has 2 vCPUs and 8 GB RAM
     #resource_class: large
+    environment:
+      JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     steps:
       - run:
           name: "skip if flaky tests are enabled"
@@ -1323,6 +1334,8 @@ jobs:
     # No resource class support for machine executors, we're constrained to use the default
     # medium class which has 2 vCPUs and 8 GB RAM
     #resource_class: large
+    environment:
+      JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     steps:
       - run:
           name: "skip if flaky tests are enabled"
@@ -1340,6 +1353,8 @@ jobs:
                 suite: sentinel
   smoke-test-minimal:
     executor: smoke-test-executor
+    environment:
+      JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     steps:
       - attach_workspace:
           at: ~/
