--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,10 +13,10 @@ executors:
       - image: docker:20.10-git
   integration-test-executor:
     machine:
-      image: ubuntu-2004:current
+      image: ubuntu-2204:current
   smoke-test-executor:
     machine:
-      image: ubuntu-2004:current
+      image: ubuntu-2204:current
 
 # NOTE: the "_label" versions of these are for the case when your source or target
 # branches have slashes in them, that way the merge branch gets created properly
@@ -868,8 +868,8 @@ jobs:
 
   tarball-assembly:
     machine:
-      image: ubuntu-2004:current
-    resource_class: xlarge
+      image: ubuntu-2204:current
+    resource_class: large
     environment:
       DOCKER_CLI_EXPERIMENTAL: enabled
       JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
