--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1416,6 +1416,7 @@ jobs:
       - run:
           name: Assemble tarballs and related artifacts
           command: |
+            sudo apt update && sudo apt -y install openjdk-11-jre-headless
             export MAVEN_OPTS="-Xmx8g -XX:ReservedCodeCacheSize=1g -XX:+TieredCompilation"
             export MAVEN_ARGS="install"
             case "${CIRCLE_BRANCH}" in
