--- a/features/distributed/coordination/shell/pom.xml
+++ b/features/distributed/coordination/shell/pom.xml
@@ -47,6 +47,7 @@
         <dependency>
             <groupId>org.apache.karaf.shell</groupId>
             <artifactId>org.apache.karaf.shell.core</artifactId>
+            <version>${karafVersion}</version>
         </dependency>
     </dependencies>
 </project>
