--- a/pom.xml
+++ b/pom.xml
@@ -1322,7 +1322,7 @@
           <dependency>
             <groupId>org.junit.vintage</groupId>
             <artifactId>junit-vintage-engine</artifactId>
-            <version>${junitVintageEngineVersion}</version>
+            <version>${junit5Version}</version>
           </dependency>
         </dependencies>
       </plugin>
@@ -1361,7 +1361,7 @@
           <dependency>
             <groupId>org.junit.vintage</groupId>
             <artifactId>junit-vintage-engine</artifactId>
-            <version>${junitVintageEngineVersion}</version>
+            <version>${junit5Version}</version>
           </dependency>
         </dependencies>
       </plugin>
